# codex

./: .gitignore  README.md
client/: index.html  package.json
client/.yarn/: .gitignore
client/src/: App.tsx  Entity.tsx  Topic.tsx  TopicsToFindingsGraph.tsx  TopicsToTopicsGraph.tsx  index.css  main.tsx  router.ts
crawler/: .gitignore  deduplicate.py  deduplicate_and_load.py  feed_data.py  feed_test_data.py  finetune.py  generate_data.py  inference.py  prepare_finetune.py  process.py  prompts.py  pyproject.toml  test.py
crawler/crawler/: serializers.py  types.py
crawler/data/processed/: .gitignore
db/: docker-compose.yaml  init.sql
server/: Dockerfile  justfile  pyproject.toml
server/scripts/: deploy_vespa.py  feed_test_data.py
server/server/: main.py
