[tool.poetry]
name = "crawler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.9.15"
pydantic = "^2.6.4"
ruff = "^0.3.4"
loguru = "^0.7.2"
ipykernel = "^6.29.3"
tqdm = "^4.66.2"
click = "^8.1.7"
polars = "^0.20.16"
httpx = "^0.27.0"
setuptools = "^69.2.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
